--- a/index.html
+++ b/index.html
@@ -1,130 +1,168 @@
 <!DOCTYPE html>
 <html lang="id" dir="ltr" class="no-js" oncontextmenu="return false">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Pemesanan Menu - Warung Bu Rom</title>
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet" />
+        <link rel="stylesheet" href="./css/index.css" />
+        <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/dompurify/3.2.3/purify.min.js"></script>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" />
+        <link rel="icon" type="image/x-icon" href="./image/IMG-11022025-buRom.webp" />
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pemesanan Menu - Warung Bu Rom</title>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/index.css">
-    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/dompurify/3.2.3/purify.min.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
-</head>
-<body>
-    <div class="container">
-        <div class="header">
-            <div class="header-left">
-                <div class="logo">
-                    <img src="./image/IMG-11022025-buRom.webp" alt="logo" width="50px" height="50px">
+        <!-- HTML Meta Tags -->
+        <meta name="description" content="Ini adalah website kantin bu Rom, semua makanan yang anda inginkan ada disini dan makanannya lezat" />
+        <meta name="language" content="id" />
+        <meta name="author" content="Indra D.A | bu Rom" />
+        <meta name="keywords" content="kantin,canteen,kampus,universitaspamulang,viktor,buaran,kotatangerangselatan,ciputat,makanan,minuman,mahasiswa,mahasiswa,terjangkau" />
+        <meta name="robots" content="index, follow" />
+
+        <!-- Google / Search Engine Tags -->
+        <meta itemprop="name" content="Kantin bu Rom" />
+        <meta itemprop="description" content="Ini adalah website kantin bu Rom, semua makanan yang anda inginkan ada disini dan makanannya lezat" />
+        <meta itemprop="image" content="./image/IMG-11022025-buRom.webp" />
+
+        <!-- Facebook Meta Tags -->
+        <meta property="og:url" content="https://kantinburom.github.io/" />
+        <meta property="og:type" content="website" />
+        <meta property="og:title" content="Kantin bu Rom Unpam Viktor" />
+        <meta property="og:description" content="Ini adalah website kantin bu Rom, semua makanan yang anda inginkan ada disini dan makanannya lezat" />
+        <meta property="og:image" content="./image/IMG-11022025-buRom.webp" />
+        <meta property="og:site_name" content="Kantin bu Rom" />
+
+        <!-- Twitter Meta Tags -->
+        <meta name="twitter:card" content="summary_large_image" />
+        <meta name="twitter:title" content="Kantin bu Rom Unpam Viktor" />
+        <meta name="twitter:description" content="Ini adalah website kantin bu Rom, semua makanan yang anda inginkan ada disini dan makanannya lezat" />
+        <meta name="twitter:image" content="./image/IMG-11022025-buRom.webp" />
+
+        <!-- Meta Tags Generated via https://github.com/Xnuvers007/Meta-Generator -->
+    </head>
+    <body>
+        <div class="container">
+            <div class="header">
+                <div class="header-left">
+                    <div class="logo">
+                        <img src="./image/IMG-11022025-buRom.webp" alt="logo" width="50px" height="50px" />
+                    </div>
+                    <div class="header-text">
+                        <h1>Warung Bu Rom</h1>
+                        <p class="subtitle">Silakan isi data diri Anda untuk melanjutkan pemesanan</p>
+                    </div>
                 </div>
-                <div class="header-text">
-                    <h1>Warung Bu Rom</h1>
-                    <p class="subtitle">Silakan isi data diri Anda untuk melanjutkan pemesanan</p>
-                </div>
-            </div>
-            <a rel="noopener noreferrer" href="#" class="download-app" onclick="let priv6 = 'aHR0cHM6Ly9rYW50aW5idXJvbS5naXRodWIuaW8vYXBsaWthc2kvS2FudGluJTIwYnUlMjBSb20uYXBr'; window.location.href = atob(priv6)">
-                <i class="fas fa-download"></i>
-                Download Aplikasi
-            </a>
-        </div>
-
-        <div class="progress-bar">
-            <div class="progress" id="formProgress"></div>
-        </div>
-
-        <form id="orderForm" onsubmit="return false;">
-            <div class="form-group">
-                <label for="name">Nama Lengkap</label>
-                <div class="input-container">
-                    <span class="input-icon">👤</span>
-                    <input type="text" id="name" class="form-control" placeholder="Masukkan nama lengkap Anda"
-                        autocomplete="name" oninput="validateInput(this, 'name')" required maxlength="60">
-                </div>
-                <div class="error-message" id="nameError">Nama hanya boleh berisi huruf dan spasi</div>
-            </div>
-
-            <div class="form-group">
-                <label for="address">Alamat Pengiriman</label>
-                <div class="input-container">
-                    <span class="input-icon">📍</span>
-                    <input type="text" id="address" class="form-control"
-                        placeholder="Masukkan alamat lengkap (Opsional)" autocomplete="street-address"
-                        oninput="validateInput(this, 'address')" maxlength="100">
-                </div>
-            </div>
-
-            <div class="form-group">
-                <label for="className">Kelas</label>
-                <div class="input-container">
-                    <span class="input-icon">🎓</span>
-                    <input type="text" id="className" class="form-control" placeholder="Masukkan kelas Anda (Opsional)"
-                        oninput="validateInput(this, 'class')" maxlength="12">
-                </div>
-            </div>
-
-            <button type="button" id="nextButton" class="next-btn" disabled onclick="submitForm()">
-                Lanjut ke Menu
-            </button>
-        </form>
-    </div>
-
-    <script src="./js/index.js">
-    </script>
-    <footer>
-        <div class="footer-content">
-            <div class="footer-social">
-                <a href="#" class="social-icon facebook" target="_blank" rel="noopener noreferrer" aria-label="Facebook"
-                    onclick="let priv1 = 'aHR0cHM6Ly93d3cuZmFjZWJvb2suY29tL3NpdGlyb21sYWgucHVqaWhhc3R1dGk='; window.location.href = atob(priv1)">
-                    <i class="fab fa-facebook-f"></i>
-                </a>
-                <a href="#" class="social-icon" target="_blank" rel="noopener noreferrer" aria-label="Gmail"
-                    onclick="let priv2 = 'bWFpbHRvOnNpdGlyb21sYWg1ODE5ODBAZ21haWwuY29t'; window.location.href = atob(priv2)">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 24" width="64" height="64">
-                        <path
-                            d="M29.986 27.715H2.008C.915 27.715 0 26.85 0 25.733V6.376A2.01 2.01 0 0 1 2.008 4.37h27.978c1.093 0 2.008.9 2.008 2.008v19.33c-.025 1.144-.915 2.008-2.008 2.008z"
-                            fill="#f2f2f2" />
-                        <path d="M4 27.715l11.97-8.76.076-.508L3.7 9.578l-.025 17.705z" opacity=".1" fill="#221f1f" />
-                        <g fill="#d44c3d">
-                            <path
-                                d="M2.008 27.715C.9 27.715 0 26.85 0 25.733V6.35c0-1.118.9-1.32 2.008-1.32s2.008.23 2.008 1.32v21.364z" />
-                            <path
-                                d="M2.008 5.334c1.423 0 1.703.432 1.703 1.016v21.084H2.008c-.94 0-1.703-.762-1.703-1.703V6.35c-.025-.6.28-1.016 1.703-1.016zm0-.28C.9 5.055 0 5.283 0 6.35v19.356a1.98 1.98 0 0 0 2.008 2.008h2.008V6.35C4 5.258 3.126 5.055 2.008 5.055zm27.978.28c1.296 0 1.703.254 1.703.966v19.458c0 .94-.762 1.703-1.703 1.703h-1.703V6.3c-.025-.737.407-.966 1.703-.966zm0-.28c-1.118 0-2.008.152-2.008 1.245v21.44h2.008c1.118 0 2.008-.9 2.008-2.008V6.274c-.025-1.093-.915-1.22-2.008-1.22z" />
-                            <path
-                                d="M29.986 27.715h-2.008V6.3c0-1.118.9-1.245 2.008-1.245s2.008.152 2.008 1.245v19.458a2 2 0 0 1-2.008 1.957z" />
-                        </g>
-                        <path
-                            d="M21.422 27.715L.178 7.2l1.118.457 14.8 10.647L31.993 6.63v19.128a1.99 1.99 0 0 1-2.008 1.982z"
-                            opacity=".08" fill="#221f1f" />
-                        <g fill="#d44c3d">
-                            <path
-                                d="M15.96 18.98L.864 8.028c-.9-.66-1.144-1.93-.483-2.82s1.93-1.093 2.846-.432l12.757 9.275L28.817 4.65c.9-.66 2.135-.457 2.795.457.66.9.457 2.135-.457 2.795z" />
-                            <path
-                                d="M29.986 4.572c.534 0 1.067.254 1.398.712.534.762.38 1.83-.38 2.4L15.96 18.625 1.042 7.8C.28 7.24.076 6.147.6 5.4c.305-.457.84-.737 1.423-.737.38 0 .737.102 1.016.33l12.73 9.25.178.102.178-.102 12.82-9.393c.33-.178.66-.28 1.042-.28zm0-.305c-.407 0-.84.102-1.17.38L15.984 14.05 3.202 4.75c-.33-.254-.762-.38-1.194-.38-.635.025-1.27.305-1.652.84-.635.9-.38 2.135.508 2.795L15.96 18.98 31.155 7.9a2.02 2.02 0 0 0 .457-2.795c-.407-.534-1.016-.84-1.626-.84z" />
-                        </g>
-                    </svg>
-                    <i class="fab"></i>
-                </a>
-                <a href="#" class="social-icon whatsapp" target="_blank" rel="noopener noreferrer" aria-label="Whatsapp"
-                    onclick="let priv3 = 'aHR0cHM6Ly9hcGkud2hhdHNhcHAuY29tL3NlbmQvP3Bob25lPTYyODEzODY1ODU5MjE='; window.location.href = atob(priv3)">
-                    <i class="fab fa-whatsapp"></i>
+                <a rel="noopener noreferrer" href="#" class="download-app" onclick="let priv6 = 'aHR0cHM6Ly9rYW50aW5idXJvbS5naXRodWIuaW8vYXBsaWthc2kvS2FudGluJTIwYnUlMjBSb20uYXBr'; window.location.href = atob(priv6)">
+                    <i class="fas fa-download"></i>
+                    Download Aplikasi
                 </a>
             </div>
-            <div class="footer-links">
-                <a rel="noopener noreferrer" href="#"
-                    onclick="swal({title: 'Tentang Kami', text: 'Informasi tentang Warung Bu Rom...', icon: 'success', button: 'OK'}).then(() => { let priv4 = 'Li90ZW50YW5nLWthbWkuaHRtbA=='; window.location.href = atob(priv4); });">Tentang
-                    Kami</a>
-                <a rel="noopener noreferrer" href="#"
-                    onclick="swal({title: 'Kebijakan Privasi', text: 'Informasi tentang Kebijakan Privasi pada Warung Bu Rom...', icon: 'success', button: 'OK'}).then(() => { let priv5 = 'Li9rZWJpamFrYW4tcHJpdmFzaS5odG1s'; window.location.href = atob(priv5); });">Kebijakan
-                    Privasi</a>
-            </div>
-            <p class="footer-text">
-                &copy;
-                <script>document.write(new Date().getFullYear())</script> Warung Bu Rom, Indra Dwi A. All rights
-                reserved.
-            </p>
-        </div>
-    </footer>
-</body>
 
+            <div class="progress-bar">
+                <div class="progress" id="formProgress"></div>
+            </div>
+
+            <form id="orderForm" onsubmit="return false;">
+                <div class="form-group">
+                    <label for="name">Nama Lengkap</label>
+                    <div class="input-container">
+                        <span class="input-icon">👤</span>
+                        <input type="text" id="name" class="form-control" placeholder="Masukkan nama lengkap Anda" autocomplete="name" oninput="validateInput(this, 'name')" required maxlength="60" />
+                    </div>
+                    <div class="error-message" id="nameError">Nama hanya boleh berisi huruf dan spasi</div>
+                </div>
+
+                <div class="form-group">
+                    <label for="address">Alamat Pengiriman</label>
+                    <div class="input-container">
+                        <span class="input-icon">📍</span>
+                        <input type="text" id="address" class="form-control" placeholder="Masukkan alamat lengkap (Opsional)" autocomplete="street-address" oninput="validateInput(this, 'address')" maxlength="100" />
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <label for="className">Kelas</label>
+                    <div class="input-container">
+                        <span class="input-icon">🎓</span>
+                        <input type="text" id="className" class="form-control" placeholder="Masukkan kelas Anda (Opsional)" oninput="validateInput(this, 'class')" maxlength="12" />
+                    </div>
+                </div>
+
+                <button type="button" id="nextButton" class="next-btn" disabled onclick="submitForm()">
+                    Lanjut ke Menu
+                </button>
+            </form>
+        </div>
+
+        <script src="./js/index.js"></script>
+        <footer>
+            <div class="footer-content">
+                <div class="footer-social">
+                    <a
+                        href="#"
+                        class="social-icon facebook"
+                        target="_blank"
+                        rel="noopener noreferrer"
+                        aria-label="Facebook"
+                        onclick="let priv1 = 'aHR0cHM6Ly93d3cuZmFjZWJvb2suY29tL3NpdGlyb21sYWgucHVqaWhhc3R1dGk='; window.location.href = atob(priv1)"
+                    >
+                        <i class="fab fa-facebook-f"></i>
+                    </a>
+                    <a href="#" class="social-icon" target="_blank" rel="noopener noreferrer" aria-label="Gmail" onclick="let priv2 = 'bWFpbHRvOnNpdGlyb21sYWg1ODE5ODBAZ21haWwuY29t'; window.location.href = atob(priv2)">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 24" width="64" height="64">
+                            <path d="M29.986 27.715H2.008C.915 27.715 0 26.85 0 25.733V6.376A2.01 2.01 0 0 1 2.008 4.37h27.978c1.093 0 2.008.9 2.008 2.008v19.33c-.025 1.144-.915 2.008-2.008 2.008z" fill="#f2f2f2" />
+                            <path d="M4 27.715l11.97-8.76.076-.508L3.7 9.578l-.025 17.705z" opacity=".1" fill="#221f1f" />
+                            <g fill="#d44c3d">
+                                <path d="M2.008 27.715C.9 27.715 0 26.85 0 25.733V6.35c0-1.118.9-1.32 2.008-1.32s2.008.23 2.008 1.32v21.364z" />
+                                <path
+                                    d="M2.008 5.334c1.423 0 1.703.432 1.703 1.016v21.084H2.008c-.94 0-1.703-.762-1.703-1.703V6.35c-.025-.6.28-1.016 1.703-1.016zm0-.28C.9 5.055 0 5.283 0 6.35v19.356a1.98 1.98 0 0 0 2.008 2.008h2.008V6.35C4 5.258 3.126 5.055 2.008 5.055zm27.978.28c1.296 0 1.703.254 1.703.966v19.458c0 .94-.762 1.703-1.703 1.703h-1.703V6.3c-.025-.737.407-.966 1.703-.966zm0-.28c-1.118 0-2.008.152-2.008 1.245v21.44h2.008c1.118 0 2.008-.9 2.008-2.008V6.274c-.025-1.093-.915-1.22-2.008-1.22z"
+                                />
+                                <path d="M29.986 27.715h-2.008V6.3c0-1.118.9-1.245 2.008-1.245s2.008.152 2.008 1.245v19.458a2 2 0 0 1-2.008 1.957z" />
+                            </g>
+                            <path d="M21.422 27.715L.178 7.2l1.118.457 14.8 10.647L31.993 6.63v19.128a1.99 1.99 0 0 1-2.008 1.982z" opacity=".08" fill="#221f1f" />
+                            <g fill="#d44c3d">
+                                <path d="M15.96 18.98L.864 8.028c-.9-.66-1.144-1.93-.483-2.82s1.93-1.093 2.846-.432l12.757 9.275L28.817 4.65c.9-.66 2.135-.457 2.795.457.66.9.457 2.135-.457 2.795z" />
+                                <path
+                                    d="M29.986 4.572c.534 0 1.067.254 1.398.712.534.762.38 1.83-.38 2.4L15.96 18.625 1.042 7.8C.28 7.24.076 6.147.6 5.4c.305-.457.84-.737 1.423-.737.38 0 .737.102 1.016.33l12.73 9.25.178.102.178-.102 12.82-9.393c.33-.178.66-.28 1.042-.28zm0-.305c-.407 0-.84.102-1.17.38L15.984 14.05 3.202 4.75c-.33-.254-.762-.38-1.194-.38-.635.025-1.27.305-1.652.84-.635.9-.38 2.135.508 2.795L15.96 18.98 31.155 7.9a2.02 2.02 0 0 0 .457-2.795c-.407-.534-1.016-.84-1.626-.84z"
+                                />
+                            </g>
+                        </svg>
+                        <i class="fab"></i>
+                    </a>
+                    <a
+                        href="#"
+                        class="social-icon whatsapp"
+                        target="_blank"
+                        rel="noopener noreferrer"
+                        aria-label="Whatsapp"
+                        onclick="let priv3 = 'aHR0cHM6Ly9hcGkud2hhdHNhcHAuY29tL3NlbmQvP3Bob25lPTYyODEzODY1ODU5MjE='; window.location.href = atob(priv3)"
+                    >
+                        <i class="fab fa-whatsapp"></i>
+                    </a>
+                </div>
+                <div class="footer-links">
+                    <a
+                        rel="noopener noreferrer"
+                        href="#"
+                        onclick="swal({title: 'Tentang Kami', text: 'Informasi tentang Warung Bu Rom...', icon: 'success', button: 'OK'}).then(() => { let priv4 = 'Li90ZW50YW5nLWthbWkuaHRtbA=='; window.location.href = atob(priv4); });"
+                    >
+                        Tentang Kami
+                    </a>
+                    <a
+                        rel="noopener noreferrer"
+                        href="#"
+                        onclick="swal({title: 'Kebijakan Privasi', text: 'Informasi tentang Kebijakan Privasi pada Warung Bu Rom...', icon: 'success', button: 'OK'}).then(() => { let priv5 = 'Li9rZWJpamFrYW4tcHJpdmFzaS5odG1s'; window.location.href = atob(priv5); });"
+                    >
+                        Kebijakan Privasi
+                    </a>
+                </div>
+                <p class="footer-text">
+                    &copy;
+                    <script>
+                        document.write(new Date().getFullYear());
+                    </script>
+                    Warung Bu Rom, Indra Dwi A. All rights reserved.
+                </p>
+            </div>
+        </footer>
+    </body>
 </html>
