--- a/tentang-kami.html
+++ b/tentang-kami.html
@@ -302,11 +302,11 @@
 <body>
     <nav class="navbar">
         <div class="navbar-container">
-            <a href="./index.html" class="nav-brand">Warung Bu Rom</a>
+            <a rel="noopener noreferrer" href="./index.html" class="nav-brand">Warung Bu Rom</a>
             <div class="nav-links">
-                <a href="./index.html">Beranda</a>
-                <a href="./tentang-kami.html">Tentang Kami</a>
-                <a href="./kebijakan-privasi.html">Kebijakan Privasi</a>
+                <a rel="noopener noreferrer" href="./index.html">Beranda</a>
+                <a rel="noopener noreferrer" href="./tentang-kami.html">Tentang Kami</a>
+                <a rel="noopener noreferrer" href="./kebijakan-privasi.html">Kebijakan Privasi</a>
             </div>
         </div>
     </nav>
