--- a/tentang-kami.html
+++ b/tentang-kami.html
@@ -4,6 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tentang Kami - Warung Bu Rom</title>
+        <link rel="icon" type="image/x-icon" href="./image/IMG-11022025-buRom.webp" />
+
+        <!-- HTML Meta Tags -->
+        <meta name="description" content="Ini adalah website kantin bu Rom, semua makanan yang anda inginkan ada disini dan makanannya lezat" />
+        <meta name="language" content="id" />
+        <meta name="author" content="Indra D.A | bu Rom" />
+        <meta name="keywords" content="kantin,canteen,kampus,universitaspamulang,viktor,buaran,kotatangerangselatan,ciputat,makanan,minuman,mahasiswa,mahasiswa,terjangkau" />
+        <meta name="robots" content="index, follow" />
+
+        <!-- Google / Search Engine Tags -->
+        <meta itemprop="name" content="Kantin bu Rom" />
+        <meta itemprop="description" content="Ini adalah website kantin bu Rom, semua makanan yang anda inginkan ada disini dan makanannya lezat" />
+        <meta itemprop="image" content="./image/IMG-11022025-buRom.webp" />
+
+        <!-- Facebook Meta Tags -->
+        <meta property="og:url" content="https://kantinburom.github.io/" />
+        <meta property="og:type" content="website" />
+        <meta property="og:title" content="Kantin bu Rom Unpam Viktor" />
+        <meta property="og:description" content="Ini adalah website kantin bu Rom, semua makanan yang anda inginkan ada disini dan makanannya lezat" />
+        <meta property="og:image" content="./image/IMG-11022025-buRom.webp" />
+        <meta property="og:site_name" content="Kantin bu Rom" />
+
+        <!-- Twitter Meta Tags -->
+        <meta name="twitter:card" content="summary_large_image" />
+        <meta name="twitter:title" content="Kantin bu Rom Unpam Viktor" />
+        <meta name="twitter:description" content="Ini adalah website kantin bu Rom, semua makanan yang anda inginkan ada disini dan makanannya lezat" />
+        <meta name="twitter:image" content="./image/IMG-11022025-buRom.webp" />
+
+        <!-- Meta Tags Generated via https://github.com/Xnuvers007/Meta-Generator -->
+    
     <link href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" rel="stylesheet">
     <style>
         * {
