--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="id" dir="ltr" class="no-js" oncontextmenu="return false">
     <head>
+        <link rel="canonical" href="https://kantinburom.github.io/" />
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Pemesanan Menu - Warung Bu Rom</title>
