--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" />
         <link rel="icon" type="image/x-icon" href="./image/IMG-11022025-buRom.webp" />
 
+        <meta http-equiv="X-Content-Type-Options" content="nosniff">
+        <meta http-equiv="X-Frame-Options" content="DENY">
+        <meta http-equiv="X-XSS-Protection" content="1; mode=block">
+        <meta http-equiv="Referrer-Policy" content="strict-origin-when-cross-origin">
+        <meta http-equiv="Permissions-Policy" content="geolocation=(), microphone=(), camera=()">
+
         <!-- HTML Meta Tags -->
         <meta name="description" content="Ini adalah website kantin bu Rom, semua makanan yang anda inginkan ada disini dan makanannya lezat" />
         <meta name="language" content="id" />
@@ -165,5 +171,12 @@
                 </p>
             </div>
         </footer>
+        <noscript>
+            <br />
+            <br />
+            <div class="noscript-warning">
+                <p>Website ini memerlukan JavaScript untuk berfungsi dengan baik. Mohon aktifkan JavaScript pada peramban Anda.</p>
+            </div>
+        </noscript>
     </body>
 </html>
