--- a/menu.html
+++ b/menu.html
@@ -19,7 +19,7 @@
         frame-src 'self' https://www.google.com;
         child-src 'self' https://www.google.com;
         img-src 'self' data: blob:;
-        style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
+        style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://cdn.jsdelivr.net;
         font-src 'self' https://fonts.gstatic.com;
       "
       />
