--- a/index.html
+++ b/index.html
@@ -56,7 +56,12 @@
             <div class="header">
                 <div class="header-left">
                     <div class="logo">
-                        <img src="./image/IMG-11022025-buRom.webp" alt="logo" width="50px" height="50px" />
+                            <img 
+        srcset="./image/IMG-11022025-buRom-1x.webp 1x, 
+                ./image/IMG-11022025-buRom-2x.webp 2x, 
+                ./image/IMG-11022025-buRom-3x.webp 3x" 
+        src="./image/IMG-11022025-buRom.webp" 
+        alt="logo" />
                     </div>
                     <div class="header-text">
                         <h1>Warung Bu Rom</h1>
