--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
         <meta http-equiv="cache-control" content="public, max-age=31536000">
         <meta http-equiv="expires" content="Wed, 31 Dec 2100 07:28:00 GMT">
+        <meta http-equiv="Strict-Transport-Security" content="max-age=31536000; includeSubDomains; preload">
 
         <meta http-equiv="X-Content-Type-Options" content="nosniff">
         <meta http-equiv="X-XSS-Protection" content="1; mode=block">
