--- a/menu.html
+++ b/menu.html
@@ -2,11 +2,20 @@
 <html lang="id" oncontextmenu="return false">
     <head>
         <meta charset="UTF-8" />
+        <link rel="preload" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" as="style" />
+        <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/dompurify/3.2.3/purify.min.js" as="script" />
+        <link rel="preload" href="https://unpkg.com/sweetalert/dist/sweetalert.min.js" as="script" />
+        <link rel="preload" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" as="style" />
+        <link rel="preload" href="./css/styles.css" as="style" />
+        <link rel="preload" href="./js/googlemapss.js" as="script" />
+        <link rel="preload" href="./js/menu.js" as="script" />
+        
+        <link rel="canonical" href="https://kantinburom.github.io/menu.html" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Menu Warung Bu Rom</title>
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet" />
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/dompurify/3.2.3/purify.min.js"></script>
-        <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/dompurify/3.2.3/purify.min.js" defer></script>
+        <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js" defer></script>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" />
         <link rel="stylesheet" href="./css/styles.css" />
         <link rel="icon" type="image/x-icon" href="./image/IMG-11022025-buRom.webp" />
@@ -24,8 +33,23 @@
       "
       />
 
+        <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin />
+        <link rel="dns-prefetch" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://cdnjs.cloudflare.com" crossorigin />
+        <link rel="dns-prefetch" href="https://cdnjs.cloudflare.com" />
+        <link rel="preconnect" href="https://unpkg.com" crossorigin />
+        <link rel="dns-prefetch" href="https://unpkg.com" />
+        <link rel="preconnect" href="https://cdn.jsdelivr.net" crossorigin />
+        <link rel="dns-prefetch" href="https://cdn.jsdelivr.net" />
+        <link rel="preconnect" href="https://kantinburom.github.io" crossorigin>
+        <link rel="dns-prefetch" href="https://kantinburom.github.io">
+        <link rel="preconnect" href="https://kantinburom.github.io/menu.html" crossorigin>
+        <link rel="dns-prefetch" href="https://kantinburom.github.io/menu.html">
+
         <meta http-equiv="X-Content-Type-Options" content="nosniff">
         <meta http-equiv="Strict-Transport-Security" content="max-age=31536000; includeSubDomains; preload">
+        <meta http-equiv="cache-control" content="public, max-age=31536000">
+        <meta http-equiv="expires" content="Wed, 31 Dec 2200 07:28:00 GMT">
 
         <!-- HTML Meta Tags -->
         <meta name="description" content="Ini adalah website kantin bu Rom, semua makanan yang anda inginkan ada disini dan makanannya lezat" />
@@ -61,7 +85,6 @@
                 <h1>Menu Warung Bu Rom</h1>
                 <div class="store-status open" id="storeStatus">Buka</div>
                 <div class="user-info" id="userInfo">
-                    <!-- User info will be populated here -->
                 </div>
                 <div id="jam" class="text-center"></div>
                 <mark>Pembayaran Online cek Info Toko</mark>
@@ -106,10 +129,11 @@
                     height="450"
                 >
                 </iframe>
+                <!-- used loading lazy iframe coy -->
             </div>
         </div>
         
-        <script src="./js/googlemapss.js"></script>
-        <script src="./js/menu.js"></script>
+        <script src="./js/googlemapss.js" defer></script>
+        <script src="./js/menu.js" defer></script>
     </body>
 </html>
