--- a/menu.html
+++ b/menu.html
@@ -24,11 +24,11 @@
         http-equiv="Content-Security-Policy"
         content="
         default-src 'self';
-        script-src 'self' 'unsafe-inline';
+        script-src 'self' 'unsafe-inline' https://unpkg.com;
         frame-src 'self' https://www.google.com;
         child-src 'self' https://www.google.com;
         img-src 'self' data: blob:;
-        style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://cdn.jsdelivr.net https://unpkg.com;
+        style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://cdn.jsdelivr.net;
         font-src 'self' https://fonts.gstatic.com;
       "
       />
