--- a/menu.html
+++ b/menu.html
@@ -22,9 +22,9 @@
 
         <meta
         http-equiv="Content-Security-Policy"
-        content="
+        content=" 
         default-src 'self';
-        script-src 'self' 'unsafe-inline' https://unpkg.com;
+        script-src 'self' 'unsafe-inline' https://unpkg.com https://cdnjs.cloudflare.com;
         frame-src 'self' https://www.google.com;
         child-src 'self' https://www.google.com;
         img-src 'self' data: blob:;
