--- a/menu.html
+++ b/menu.html
@@ -133,51 +133,9 @@
             </div>
         </div>
 
-        <script>
-(function() {
-    if (!window.chatbase || window.chatbase("getState") !== "initialized") {
-        window.chatbase = (...arguments) => {
-            if (!window.chatbase.q) {
-                window.chatbase.q = []
-            }
-            window.chatbase.q.push(arguments)
-        };
-        window.chatbase = new Proxy(window.chatbase, {
-            get(target, prop) {
-                if (prop === "q") {
-                    return target.q
-                }
-                return (...args) => target(prop, ...args)
-            }
-        })
-    }
-    const onLoad = function() {
-        const script = document.createElement("script");
-        script.src = "https://www.chatbase.co/embed.min.js";
-        script.id = "mNlHRbpIbjKOPhRwSzOJU";
-        script.domain = "www.chatbase.co";
-        document.body.appendChild(script);
-
-        const chatbaseStyle = document.createElement('style');
-        chatbaseStyle.innerHTML = `
-            #mNlHRbpIbjKOPhRwSzOJU {
-                position: fixed;
-                bottom: 10px;
-                left: 10px;
-                z-index: 9999;
-            }
-        `;
-        document.head.appendChild(chatbaseStyle);
-    };
-    if (document.readyState === "complete") {
-        onLoad()
-    } else {
-        window.addEventListener("load", onLoad)
-    }
-})();
-</script>
-
-        
+        <script defer>
+            (function(){if(!window.chatbase||window.chatbase("getState")!=="initialized"){window.chatbase=(...arguments)=>{if(!window.chatbase.q){window.chatbase.q=[]}window.chatbase.q.push(arguments)};window.chatbase=new Proxy(window.chatbase,{get(target,prop){if(prop==="q"){return target.q}return(...args)=>target(prop,...args)}})}const onLoad=function(){const script=document.createElement("script");script.src="https://www.chatbase.co/embed.min.js";script.id="mNlHRbpIbjKOPhRwSzOJU";script.domain="www.chatbase.co";document.body.appendChild(script)};if(document.readyState==="complete"){onLoad()}else{window.addEventListener("load",onLoad)}})();
+        </script>
         <script src="./js/googlemapss.js" defer></script>
         <script src="./js/menu.js" defer></script>
     </body>
