Add chatbot and forget about csp :)

--- a/menu.html
+++ b/menu.html
@@ -24,7 +24,7 @@
         http-equiv="Content-Security-Policy"
         content=" 
         default-src 'self';
-        script-src 'self' 'unsafe-inline' https://unpkg.com https://cdnjs.cloudflare.com;
+        script-src 'self' 'unsafe-inline' https://unpkg.com https://cdnjs.cloudflare.com https://www.chatbase.co;
         frame-src 'self' https://www.google.com;
         child-src 'self' https://www.google.com;
         img-src 'self' data: blob:;
