--- a/menu.html
+++ b/menu.html
@@ -21,17 +21,19 @@
         <link rel="icon" type="image/x-icon" href="./image/IMG-11022025-buRom.webp" />
 
         <meta
-        http-equiv="Content-Security-Policy"
-        content=" 
-        default-src 'self';
-        script-src 'self' 'unsafe-inline' https://unpkg.com https://cdnjs.cloudflare.com https://www.chatbase.co;
-        frame-src 'self' https://www.google.com;
-        child-src 'self' https://www.google.com;
-        img-src 'self' data: blob:;
-        style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://cdn.jsdelivr.net;
-        font-src 'self' https://fonts.gstatic.com;
-      "
-      />
+            http-equiv="Content-Security-Policy"
+            content=" 
+            default-src 'self';
+            script-src 'self' 'unsafe-inline' https://unpkg.com https://cdnjs.cloudflare.com https://www.chatbase.co;
+            connect-src 'self' https://www.chatbase.co;
+            frame-src 'self' https://www.google.com;
+            child-src 'self' https://www.google.com;
+            img-src 'self' data: blob:;
+            style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://cdn.jsdelivr.net;
+            font-src 'self' https://fonts.gstatic.com;
+          "
+        />
+
 
         <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin />
         <link rel="dns-prefetch" href="https://fonts.googleapis.com" />
