--- a/menu.html
+++ b/menu.html
@@ -26,7 +26,7 @@
             default-src 'self';
             script-src 'self' 'unsafe-inline' https://unpkg.com https://cdnjs.cloudflare.com https://www.chatbase.co;
             connect-src 'self' https://www.chatbase.co;
-            frame-src 'self' https://www.google.com;
+            frame-src 'self' https://www.google.com https://www.chatbase.co;
             child-src 'self' https://www.google.com;
             img-src 'self' data: blob:;
             style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://cdn.jsdelivr.net;
@@ -135,9 +135,6 @@
             </div>
         </div>
 
-        <script defer>
-            (function(){if(!window.chatbase||window.chatbase("getState")!=="initialized"){window.chatbase=(...arguments)=>{if(!window.chatbase.q){window.chatbase.q=[]}window.chatbase.q.push(arguments)};window.chatbase=new Proxy(window.chatbase,{get(target,prop){if(prop==="q"){return target.q}return(...args)=>target(prop,...args)}})}const onLoad=function(){const script=document.createElement("script");script.src="https://www.chatbase.co/embed.min.js";script.id="mNlHRbpIbjKOPhRwSzOJU";script.domain="www.chatbase.co";document.body.appendChild(script)};if(document.readyState==="complete"){onLoad()}else{window.addEventListener("load",onLoad)}})();
-        </script>
         <script src="./js/googlemapss.js" defer></script>
         <script src="./js/menu.js" defer></script>
     </body>
