--- a/tentang-kami.html
+++ b/tentang-kami.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
+
+    <link rel="preload" href="./js/chatbot.js" as="script">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tentang Kami - Warung Bu Rom</title>
@@ -397,5 +399,6 @@
             }
         });
     </script>
+    <script src="./js/chatbot.js" defer></script>
 </body>
 </html>
