--- a/kebijakan-privasi.html
+++ b/kebijakan-privasi.html
@@ -2,6 +2,7 @@
 <html lang="id">
 <head>
     <meta charset="UTF-8">
+    <link rel="preload" href="./js/chatbot.js" as="script">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kebijakan Privasi - Warung Bu Rom</title>
     <link rel="icon" type="image/x-icon" href="./image/IMG-11022025-buRom.webp" />
@@ -381,5 +382,7 @@
             }
         });
     </script>
+    <br />
+    <script src="./js/chatbot.js" defer></script>
 </body>
 </html>
