--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js" defer></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/dompurify/3.2.3/purify.min.js" defer></script>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" />
-        <link rel="icon" type="image/x-icon" href="./image/IMG-11022025-buRom.webp" />
+        <link rel="icon" type="image/x-icon" href="./image/IMG-11022025-buRom.ico" />
 
         <meta http-equiv="cache-control" content="public, max-age=31536000">
         <meta http-equiv="expires" content="Wed, 31 Dec 2200 07:28:00 GMT">
