--- a/menu.html
+++ b/menu.html
@@ -18,7 +18,7 @@
         <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js" defer></script>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
         <link rel="stylesheet" href="./css/styles.css" />
-        <link rel="icon" type="image/x-icon" href="./image/IMG-11022025-buRom.webp" />
+        <link rel="icon" type="image/x-icon" href="./image/IMG-11022025-buRom.ico" />
 
         <meta
             http-equiv="Content-Security-Policy"
