--- a/tentang-kami.html
+++ b/tentang-kami.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tentang Kami - Warung Bu Rom</title>
-        <link rel="icon" type="image/x-icon" href="./image/IMG-11022025-buRom.webp" />
+        <link rel="icon" type="image/x-icon" href="./image/IMG-11022025-buRom.ico" />
 
         <!-- HTML Meta Tags -->
         <meta name="description" content="Ini adalah website kantin bu Rom, semua makanan yang anda inginkan ada disini dan makanannya lezat" />
