--- a/menu.html
+++ b/menu.html
@@ -9,6 +9,7 @@
         <link rel="preload" href="./css/styles.css" as="style" />
         <link rel="preload" href="./js/googlemapss.js" as="script" />
         <link rel="preload" href="./js/menu.js" as="script" />
+        <link rel="preload" href="./js/chatbot.js" as="script" />
         
         <link rel="canonical" href="https://kantinburom.github.io/menu.html" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -47,6 +48,9 @@
         <link rel="dns-prefetch" href="https://kantinburom.github.io">
         <link rel="preconnect" href="https://kantinburom.github.io/menu.html" crossorigin>
         <link rel="dns-prefetch" href="https://kantinburom.github.io/menu.html">
+        <link rel="preconnect" href="https://www.chatbase.co" crossorigin>
+        <link rel="dns-prefetch" href="https://www.chatbase.co">
+        
 
         <meta http-equiv="X-Content-Type-Options" content="nosniff">
         <meta http-equiv="Strict-Transport-Security" content="max-age=31536000; includeSubDomains; preload">
@@ -137,5 +141,6 @@
 
         <script src="./js/googlemapss.js" defer></script>
         <script src="./js/menu.js" defer></script>
+        <script src="./js/chatbot.js" defer></script>
     </body>
 </html>
