FIX bug Inclusion of functionality from an untrusted source

--- a/tentang-kami.html
+++ b/tentang-kami.html
@@ -3,6 +3,8 @@
 <head>
 
     <link rel="preload" href="./js/chatbot.js" as="script">
+    <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js" as="script" />
+    <link rel="dns-prefetch" href="https://cdnjs.cloudflare.com" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tentang Kami - Warung Bu Rom</title>
@@ -378,7 +380,7 @@
         </div>
     </footer>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js" integrity="sha512-A7AYk1fGKX6S2SsHywmPkrnzTZHrgiVT7GcQkLGDe2ev0aWb8zejytzS8wjo7PGEXKqJOrjQ4oORtnimIRZBtw==" crossorigin="anonymous" defer></script>
     <script>
         document.addEventListener('DOMContentLoaded', function() {
             initConnectionStatus();
