Fix bug Inclusion of functionality from an untrusted source

--- a/kebijakan-privasi.html
+++ b/kebijakan-privasi.html
@@ -7,6 +7,11 @@
     <title>Kebijakan Privasi - Warung Bu Rom</title>
     <link rel="icon" type="image/x-icon" href="./image/IMG-11022025-buRom.ico" />
 
+    <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js" as="script" />
+    <link rel="preconnect" href="https://cdnjs.cloudflare.com" crossorigin />
+    <link rel="dns-prefetch" href="https://cdnjs.cloudflare.com" />
+    <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" as="css" />
+
     <!-- HTML Meta Tags -->
     <meta name="description" content="Ini adalah website kantin bu Rom, semua makanan yang anda inginkan ada disini dan makanannya lezat" />
     <meta name="language" content="id" />
@@ -362,7 +367,7 @@
         </div>
     </footer>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js" integrity="sha512-A7AYk1fGKX6S2SsHywmPkrnzTZHrgiVT7GcQkLGDe2ev0aWb8zejytzS8wjo7PGEXKqJOrjQ4oORtnimIRZBtw==" crossorigin="anonymous" defer></script>
     <script>
         document.addEventListener('DOMContentLoaded', function() {
             initConnectionStatus();
